--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,13 +15,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+
+        <p>Email: {{ site.email | default: Victoria.barrett@inria.fr }}</p>
 
         <p class="view"><a href="./about.html">About the author</a></p>
 
